# boxercrab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cov.yml
config/: log.yaml
crates/core/: Cargo.toml
crates/core/src/: binlog.rs  codec.rs  connector.rs  data.rs  lib.rs  parser.rs
crates/core/src/connector/: auth.rs  handshake_resp.rs  handshake_v10.rs
crates/old/: Cargo.toml
crates/old/src/: cli.rs  connection.rs  lib.rs
crates/old/src/events/: mod.rs
src/: cli.rs  lib.rs  main.rs  mysql.rs  utils.rs
src/events/: anonymous_gtid.rs  format_desc.rs  mod.rs  previous_gtids.rs  query.rs  rows.rs  table_map.rs  write_row_v2.rs
tests/: hexdump.txt  test.rs
tests/events/02_query/: dump.txt  sql.sql
tests/events/03_stop/: dump.txt  exec.sh
tests/events/04_rotate/: dump.txt  exec.sh
tests/events/05_intvar/: dump.txt  exec.sh  sql.sql
tests/events/13_rand/: dump.txt  sql.sql
tests/events/14_user_var/: README.md  dump.txt  exec.sh  sql.sql
tests/events/15_format_desc/: dump.txt  sql.sql
tests/events/16_xid/: dump.txt  sql.sql
tests/events/17_18_load/: README.md  dump.txt  sql.sql
tests/events/19_table_map/: dump.txt  sql.sql
tests/events/29_row_query/: README.md  dump.txt
tests/events/30_write_rows_v2/: dump.txt  sql.sql
tests/events/31_update_rows_v2/: dump.txt  sql.sql
tests/events/32_delete_rows_v2/: README.md  dump.txt  sql.sql
tests/events/33_35_gtid_prev_gtid/: README.md  dump.txt
tests/events/34_anonymous_gtid/: README.md  dump.txt
tests/mysql/: docker-compose.yml
tests/mysql/conf/: myconf.cnf
tests/mysql_env/: docker-compose.yml
tests/mysql_env/conf/: myconf.cnf
tests/scripts/: README.md  exec.sh  lib.sh
