[package]
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
name    = "boxercrab"
version = "0.1.0"

[dependencies]
log        = "0.4.8"
log4rs     = "0.12.0"
nom        = "5"
serde      = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde_yaml = "0.8.13"
structopt  = "0.3.15"

[[bin]]
name = "bcrab"
path = "src/cli.rs"
