[package]
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
name = "boxercrab"
version = "0.2.0"

[dependencies]
log = "0.4.11"
log4rs = "1.0.0-alpha-1"
nom = "5"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
structopt = "0.3.16"
tokio = { version = "0.2.22", features = ["full"] }
# sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "mysql", "json", "macros", "time", "decimal"] }
sqlx = { git = "https://github.com/PrivateRookie/sqlx.git", branch = "boxercrab", default-features = false, features = ["runtime-tokio", "mysql", "json", "macros", "time", "decimal"] }
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
bytes = "0.5.6"

[[bin]]
name = "bcrab"
path = "src/cli.rs"
