[package]
name = "boxercrab"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
parse-tool = { git = "https://github.com/PrivateRookie/parse-tool" }
thiserror = "1"
bitflags = "2"
sha1 = "0.10.5"
